<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pymoveit2_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tomsa.julius@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <depend>pymoveit2</depend>
  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
