<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_tutorials</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tomsa.julius@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <!-- depend>interactive_markers</depend -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>
  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>pluginlib</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_task_constructor_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
